fix license-terms spacing

--- a/components/license-terms/license-terms.css
+++ b/components/license-terms/license-terms.css
@@ -21,6 +21,7 @@
 .license-terms-contracts {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
 }
@@ -29,8 +30,12 @@
 .license-terms-contracts__premium-leasing,
 .license-terms-contracts__unlimited-leasing,
 .license-terms-contracts__exclusive {
-  width: 17rem;
-  margin: 1rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  width: 18rem;
+  margin: 1rem 0;
 }
 
 @media (max-width: 768px) {
@@ -39,13 +44,30 @@
   }
 }
 
+.popular {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  color: var(--white);
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: var(--black);
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+  padding: 5px;
+}
+
+.popular img {
+  width: 20px;
+  height: 20px;
+}
+
 .license-terms-contracts table {
   display: block;
   text-align: left;
   background-color: var(--box-color);
   box-shadow: var(--box-shadow);
   padding: 5px;
-  margin-bottom: 0.5rem;
   border-radius: 5px;
 }
 
@@ -53,18 +75,6 @@
   .license-terms-contracts table {
     display: none;
   }
-}
-
-.license-terms-contracts table tr td {
-  padding: 5px;
-}
-
-.fa-times {
-  color: red;
-}
-
-.fa-check {
-  color: green;
 }
 
 .popular {
@@ -79,12 +89,23 @@
   border-radius: 5px;
   box-shadow: var(--box-shadow);
   padding: 5px;
-  margin: 5px 0;
 }
 
 .popular img {
   width: 20px;
   height: 20px;
+}
+
+.license-terms-contracts table tr td {
+  padding: 5px;
+}
+
+.fa-times {
+  color: red;
+}
+
+.fa-check {
+  color: green;
 }
 
 .license-terms-contracts h2 {
@@ -101,7 +122,6 @@
   text-align: center;
   background-color: var(--primary-color);
   padding: 1rem;
-  margin: 0.5rem 0;
   border-radius: 5px;
   box-shadow: var(--box-shadow);
 }
